Fixed text colour on dark mode and video size on mobile

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -7,6 +7,10 @@
   min-height: 100vh;
 }
 
+.title {
+  color: white;
+}
+
 .container {
   background-image: url('/back.png');
   background-size: cover;
